# f1tenth

./: .gitignore  .gitmodules  F1Tenth.json  README.md  colcon_defaults.yaml
.devcontainer/: Dockerfile  devcontainer.json
maps/: extract_centerline_from_occupancy_final.py  extract_centerline_from_occupancy_v2.py  extract_centerline_v1_2.py  extract_centerline_v2_1.py  extract_centerline_v2_2.py  extract_track_centerline_and_boundaries.py  map_2025_05_07-19_47.pgm  map_2025_05_07-19_47.yaml  map_2025_05_08-19_52.pgm  map_2025_05_08-19_59.yaml  map_2025_05_15-16_48.yaml  new_extract_centerline.py  new_extract_centerline_v2.py  process_map.asv  process_map.m  process_map_v2.asv  process_map_v2.m  process_map_v3.m  tempCodeRunnerFile.py
maps/map_2025-07-03_15-58-31/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-07-16_15-17-15/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-07-16_15-28-18/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-09-20_18-59-45/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-09-21_15-05-08/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-08_19-32-41/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-08_21-19-15/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-09_14-57-50/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-10_10-14-56/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-10_16-18-49/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-10_16-32-43/: cartographer_metrics.csv  map_output.pbstream  map_output.yaml
maps/map_2025-10-11_12-41-37/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2025-10-11_19-15-42/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/map_2026-01-21_15-14-39/: cartographer_metrics.csv  map_output.pbstream  map_output.pgm  map_output.yaml
maps/slam_toolbox_maps/: map_2025_05_08-19_52.yaml  map_2025_05_08-19_59.pgm  map_2025_05_09-14_33.data  map_2025_05_09-14_33.pgm  map_2025_05_09-14_33.yaml  map_2025_05_09-17_49.data  map_2025_05_09-17_49.pgm  map_2025_05_09-17_49.yaml  map_2025_05_15-16_48.data  map_2025_05_15-16_48.pgm
services/: foxglove_bridge.service  install_services.sh
sim_mpc/250103_MPC_sim/: NEWTstRigidVehicleModelMPC.slx  NEWTstRigidVehicleModelMPC.slxc  VIENA_testeJF.slx  acados_ocp_nlp.json  add_path_theta.m  calc_nearest_path_index.m  calc_ref_trajectory.m  carState_.mat  carState_270223.mat  carState_fixed25kmh_coeffx100_270223.mat  carState_linret.mat  car_model.m  checkSlip.m  check_acados_requirements.m  check_goal.m  computation_time.fig  computeError.m  confun_v1.m  createVParam.m  evalPitchPerformance.m  evalScript.m  globalDef.m  input_scenario_V3.m  main2.m  objfun_v1.m  path_def.m  (+8 more)
sim_mpc/torque_vectoring/: CMakeLists.txt  README  package.xml
sim_mpc/torque_vectoring/MATLAB_files/: formulate_TV.asv  formulate_TV.m  main.m  output_TV_solver  plot_pacjeka.asv  plot_pacjeka.m  polynomial_fit_preview.m  sampleTorquesTV.m  solverTV.mexa64  solverTVBuildable.m  solverTV_adtool2forces.c  solverTV_adtool2forces.h  solverTV_casadi.c
sim_mpc/torque_vectoring/MATLAB_files/TV_solver_output/include/: solverTV_memory.h
sim_mpc/torque_vectoring/MATLAB_files/TV_solver_output/rest/: solverTV_dynamics.mexa64
sim_mpc/torque_vectoring/MATLAB_files/solverTV/interface/: COPYING.m  definitions.py  solverTV.m  solverTV_build.py  solverTV_coderFunction.m  solverTV_coderFunctioncompact.m  solverTV_createCoderMatlabFunction.m  solverTV_get_mem_size.c  solverTV_lib.mdl  solverTV_mex.c  solverTV_py.py  solverTV_simulinkBlock.c  solverTV_simulinkBlockcompact.c  solverTVcompact_lib.mdl
sim_mpc/torque_vectoring/config/: default.yaml
sim_mpc/torque_vectoring/include/: tqvec_handle.hpp  tqvec_pid.hpp  tqvec_pipeline.hpp
sim_mpc/torque_vectoring/include/as_lib/: common.h
sim_mpc/torque_vectoring/launch/: torque_vectoring.launch
sim_mpc/torque_vectoring/solverTV/: solverTV_casadi.h
sim_mpc/torque_vectoring/solverTV/include/: solverTV.h
sim_mpc/torque_vectoring/solverTV/rest/: solverTV_ineq.mexa64  solverTV_objective.mexa64
sim_mpc/torque_vectoring/src/: tqvec_handle.cpp  tqvec_main.cpp  tqvec_pid.cpp  tqvec_pipeline.cpp
src/control/mpc_curv_off_ls_v1/: CMakeLists.txt  mpc_solver  package.xml
src/control/mpc_curv_off_ls_v1/include/mpc/: mpc.hpp
src/control/mpc_curv_off_ls_v1/src/: main.cpp
src/control/utils/: CMakeLists.txt  package.xml
src/control/utils/include/utils/: coordinate_transform.hpp
src/control/utils/src/: coordinate_transform.cpp
src/f1tenth_system/zed_rgb_node/: CMakeLists.txt  package.xml
src/f1tenth_system/zed_rgb_node/lib/zed-open-capture/: CMakeLists.txt
src/f1tenth_system/zed_rgb_node/src/: zed_rgb_node.cpp
src/mpc/: CMakeLists.txt  mpc_solver  package.xml
src/mpc/include/mpc/: global_to_local.hpp  mpc.hpp
src/mpc/src/: global_to_local.cpp  main.cpp
tools/: connect_xbox.sh  draw_path_imu.py  filter_bag.py  home-jetson-remote_f1tenth.mount  install_acados.md  install_services.sh  log_cartographer_metrics.py  record_bags.py  ros2_jtop.service  save_map.sh  save_map_cartographer.py  size_rosbag.py
traj/: centerline_0.01_map_2026-01-21_15-14-39.csv  centerline_0.01_map_2026-01-21_15-14-39_v2.csv  centerline_0.05_map_2025-10-11_19-15-42.csv  centerline_0.05_map_2025-10-11_19-15-42_v2.csv  centerline_0.05_map_2026-01-21_15-14-39.csv  centerline_0.05_map_2026-01-21_15-14-39_v2.csv  centerline_map_2025-07-16_15-28-18.csv  centerline_v2_map_2025-07-16_15-28-18.csv  centerline_v2_map_2025-09-09_10-52-29.csv  centerline_v2_test_map.csv  ellipse_trajectory.csv  ellipse_trajectory.npz  splines.py  track_data.csv
(+1222 files in other folders)
